--- a/index.css
+++ b/index.css
@@ -47,7 +47,8 @@ h6 {
 
 .content {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   gap: 24px;
   color: white;
   margin-bottom: 24px;
@@ -60,8 +61,6 @@ h6 {
   letter-spacing: 0px;
   text-align: left;
 }
-
-
 
 .content-title {
   font-size: 40px;
@@ -240,18 +239,25 @@ h6 {
     margin-right: 180px;
   }
 
-  .content {
-    padding-left: 80px;
+  .box-content {
+    display: flex;
+    align-items: center;
+    padding-left: 50px;
+    margin-bottom: 96px;
+  }
+
+  .fit-logo {
+    padding-bottom: 220px;
+
   }
 
   .content-title {
     font-size: 64px;
     line-height: 72px;
-    padding-left: 50px;
     max-width: 668px;
   }
 
   .arrows {
-    padding-bottom: 50px;
+    margin-left: 180px;
   }
 }
