--- a/index.css
+++ b/index.css
@@ -69,7 +69,6 @@ h6 {
   letter-spacing: -0.5px;
   text-align: left;
   color: white;
-  margin-bottom: 32px;
   max-width: 226px;
 }
 
@@ -119,43 +118,6 @@ h6 {
   line-height: 24px;
   letter-spacing: 0px;
   text-align: center;
-}
-
-.options {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.job-cards {
-  margin-bottom: 20px;
-  height: 175px;
-  width: 311px;
-  border-radius: 24px;
-  height: 247px;
-  background: #ffffff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 15px;
-}
-
-.job-notification {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-}
-
-.job-cards:hover {
-  background: #232340;
-}
-
-.job-cards:hover h6 {
-  color: white;
-}
-
-.job-cards:hover figure img {
-  filter: brightness(1000%);
 }
 
 .container-footer {
@@ -230,13 +192,18 @@ h6 {
 
   .second-logo {
     display: block;
-    height: 16px;
-    width: 16px;
+    height: 22px;
+    width: 22px;
     padding: 4px;
     border-radius: 0px;
     background: #5468E7;
     border-radius: 8px;
     margin-right: 180px;
+  }
+
+  .small-title {
+    font-size: 18px;
+    line-height: 24px;
   }
 
   .box-content {
@@ -247,8 +214,7 @@ h6 {
   }
 
   .fit-logo {
-    padding-bottom: 220px;
-
+    padding-bottom: 215px;
   }
 
   .content-title {
