--- a/assets/css/who.css
+++ b/assets/css/who.css
@@ -5,14 +5,22 @@
 .about-container {
     display: flex;
     align-items: center;
-    gap: 68px;
-    margin-bottom: 80px;
+    flex-direction: column;
+    padding: 0px 32px;
+    justify-content: center;
 }
 
 .years {
     display: flex;
     padding: 0px 24px;
     gap: 55px;
+}
+
+.arrows-years {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
 .number-year {
@@ -23,4 +31,107 @@
     color: white;
 }
 
-@media screen and (min-width: 760px) {}
+.about-text {
+    height: 96px;
+    width: 311px;
+    border-radius: nullpx;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 32px;
+    letter-spacing: -0.2px;
+    text-align: left;
+    color: #FFFFFF;
+}
+
+.number-branding {
+    height: 310px;
+    width: 310px;
+    margin-top: 57px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 60%;
+    box-shadow: 2px 2px 4px rgba(22, 22, 68, 0.2);
+    background: #1e1e33;
+    margin-bottom: 65px;
+}
+
+
+.yrs {
+    display: none;
+}
+
+.number-about {
+    font-size: 140px;
+    font-weight: 600;
+    letter-spacing: 0px;
+    color: white;
+}
+
+
+@media screen and (min-width: 760px) {
+
+    .number-branding {
+        height: 402px;
+        width: 402px;
+        background: #232340;
+    }
+
+    .years {
+        display: none;
+    }
+
+    .yrs {
+        display: block;
+        list-style: none;
+        padding-right: 5px;
+        padding-top: 100px;
+    }
+
+    .yrs li {
+        margin-bottom: 102px;
+    }
+
+    .yrs li p {
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 24px;
+        letter-spacing: 0px;
+        text-align: left;
+        color: #8B8B8B;
+    }
+
+    .about-container {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        padding-left: 210px;
+        padding-bottom: 100px;
+    }
+
+    .years-img {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 160px;
+    }
+
+    .about-text {
+        height: 80px;
+        width: 468px;
+        font-size: 32px;
+        line-height: 40px;
+        letter-spacing: -0.5px;
+    }
+
+    .number-about {
+        font-size: 200px;
+        line-height: 239px;
+        letter-spacing: 0px;
+        text-align: center;
+    }
+
+}
