changes in section about, jobs and services

--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -53,6 +53,10 @@
 
     .services {
         flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        margin-top: 96px;
+        margin-bottom: 96px;
     }
 
     .items {
