--- a/index.css
+++ b/index.css
@@ -76,18 +76,25 @@ h6 {
 
 .arrows {
   display: flex;
-  gap: 30px;
-  margin-bottom: 80px;
+  flex-direction: row;
+  margin-bottom: 60px;
 }
 
-.arrow-left:hover {
-  background: #5468E7;
-  border-radius: 50%;
+.fit-arrow:hover img {
+  filter: brightness(1000%);
 }
 
-.arrow-right:hover {
-  background: #5468E7;
+.fit-arrow {
+  height: 48px;
+  width: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.fit-arrow:hover {
   border-radius: 50%;
+  background: #5468E7;
 }
 
 .second-logo {
@@ -96,6 +103,8 @@ h6 {
 
 
 .text-branding {
+  height: 72px;
+  width: 236px;
   font-size: 18px;
   font-weight: 600;
   line-height: 24px;
@@ -111,60 +120,7 @@ h6 {
   border-radius: 24px;
 }
 
-.test {
-  width: 311px;
-  height: 548px;
-  background: #5468e7;
-  border-radius: 24px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
 
-.bubble-green {
-  height: 73px;
-  width: 73px;
-  border-radius: 0px;
-}
-
-.btn-footer {
-  height: 56px;
-  width: 263px;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 22px;
-  text-align: center;
-  color: #5468E7;
-  background: #FFFFFF;
-  border-radius: 8px;
-}
-
-.logo-footer {
-  margin-top: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 18px;
-}
-
-.footer-symbol {
-  height: 24px;
-  width: 24px;
-  padding: 5px;
-  border-radius: 8px;
-  background: #5468E7;
-  border-radius: 8px
-}
-
-.footer-folio {
-  height: 26px;
-  width: 71px;
-
-  border-radius: 0px;
-}
 
 @media screen and (min-width: 760px) {
   .paragraph {
@@ -206,8 +162,26 @@ h6 {
     max-width: 668px;
   }
 
+  .fit-arrow {
+    height: 64px;
+    width: 64px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+
   .arrows {
     margin-left: 180px;
-    padding-top: 25%;
+    padding-top: 15%;
+  }
+
+  .text-branding {
+    height: 80px;
+    width: 568px;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: -0.5px;
   }
 }
