--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -158,6 +158,7 @@
     }
 
     .footer-follow {
+        color: #5468E7;
         display: block;
         font-size: 14px;
         font-weight: 600;
