--- a/global.css
+++ b/global.css
@@ -120,7 +120,9 @@ h6 {
   border-radius: 24px;
 }
 
-
+.number-title {
+  margin-right: 24px;
+}
 
 @media screen and (min-width: 760px) {
   .paragraph {
