--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,9 +1,16 @@
 header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 62px 32px;
+    z-index: 100;
+    background: white;
 }
+
 
 .logo {
     display: flex;
@@ -50,6 +57,7 @@ header {
 
     header {
         padding: 64px 72px;
+        position: static;
     }
 
     .burguer-menu {
